refactor: Cars 생성 로직 최적화
- Collectors.collectingAndThen() 적용