@@ -3,6 +3,7 @@ package racingcar.model;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -14,16 +15,16 @@ class RacingGameTest {
 
     @BeforeEach
     void setUp() {
-        cars = new Cars(getCars());
+        cars = getCars();
         tryCount = new TryCount(3);
     }
 
-    private static List<Car> getCars() {
+    private static Cars getCars() {
         List<String> carNames = List.of("a", "b", "c");
         return carNames.stream()
                 .map(CarName::new)
                 .map(Car::new)
-                .toList();
+                .collect(Collectors.collectingAndThen(Collectors.toList(), Cars::new));
     }
 
     @DisplayName("게임 횟수 만큼 게임을 실행한다.")
